# easy_tdx

./: .gitignore  MyTT.py  MyTT.pyi  README.md  __init__.py  _binary.py  client.py  codec.py  commands.py  ex.py  exceptions.py  indicator.py  mac.py  pyproject.toml  unified.py  welcome-discussion.md  因子分析.py
.claude/: settings.local.json
.claude/skills/: publish.md
.github/workflows/: ci.yml  publish.yml
chanlun/: analyser.py  bi.py  kline_merge.py  macd.py  mmd.py  multi_level.py  types.py  xd.py  zsd.py
codec/: frame.py
commands/: base.py  block_info.py  finance_info.py  fund_flow.py  minute_time.py  security_list.py  setup.py  transaction.py  xdxr_info.py
docs/: api_reference.md  backtest_usage.md  quantitative-guide.md
easy_tdx/: MyTT.py  _df.py  client.py  config.py  indicator.py  unified.py
easy_tdx/backtest/: __init__.py  attribution.py  cli.py  combo.py  dsl.py  engine.py  execution.py  orders.py  performance.py  portfolio.py  portfolio_engine.py  slippage.py  strategy.py  types.py
easy_tdx/chanlun/: __init__.py  beichi.py  config.py  fractal.py  types.py  zs.py
easy_tdx/cli/: __init__.py  cmd_admin.py  cmd_announcement.py  cmd_auction.py  cmd_board.py  cmd_capital.py  cmd_chanlun.py  cmd_ex.py  cmd_factor.py  cmd_finance.py  cmd_indicator.py  cmd_info.py  cmd_kline.py  cmd_monitor.py  cmd_offline.py  cmd_pfactor.py  cmd_quote.py  cmd_run_all.py  cmd_tick.py  cmd_transaction.py  cmd_web.py  conn.py  output.py  parsers.py
easy_tdx/cninfo/: __init__.py  client.py  models.py
easy_tdx/codec/: __init__.py  bitmap.py  block.py  datetime_.py  financial.py  industry.py  mac_frame.py  price.py  price_rules.py  volume.py
easy_tdx/commands/: __init__.py  company_info.py  report_file.py  security_bars.py  security_count.py
easy_tdx/ex/: client.py  mac_client.py
easy_tdx/factor/: base.py  engine.py  transform.py
easy_tdx/mac/: client.py  enums.py
easy_tdx/models/: bar.py  enums.py  stats.py
easy_tdx/offline/: block.py  daily_bar.py  ex_daily_bar.py  finders.py  gbbq.py  history_financial.py  min_bar.py  paths.py  write_daily.py  write_ex_daily.py  write_min_bar.py
easy_tdx/portfolio/: __init__.py  risk.py  types.py
easy_tdx/realtime/: __init__.py  engine.py
easy_tdx/screen/: __init__.py  cli.py  ranker.py  scanner.py  strength.py
easy_tdx/sina/: client.py  models.py
easy_tdx/transport/: async_.py  sync.py
easy_tdx/web/: __init__.py  app.py  deps.py  errors.py  schemas.py
ex/: __init__.py  models.py
ex/commands/: __init__.py  get_history_bars_range.py  get_instrument_count.py  get_instrument_quote.py  get_instrument_quote_list.py  get_markets.py  get_minute_time.py  setup.py
ex/transport/: __init__.py  sync.py
mac/: __init__.py  client.py  models.py
models/: __init__.py  finance.py  quote.py  security.py  timeseries.py
offline/: __init__.py  block.py  ex_daily_bar.py  finders.py  gbbq.py  history_financial.py  min_bar.py  paths.py
portfolio/: optimizer.py  rebalance.py
sina/: __init__.py
transport/: __init__.py  sync.py
web/: app.py  convert.py  schemas.py
(+96 files in other folders)
