[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-tdx"
version = "1.15.0"
description = "通达信 TCP 协议行情数据客户端，支持在线行情、离线数据读取与写入同步"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "tzdata>=2024.1", "click>=8.0"]

[project.scripts]
easy-tdx = "easy_tdx.cli:cli"  # cli/__init__.py exposes the click group

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov", "mypy>=1.9", "ruff>=0.4"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.hatch.build.targets.wheel]
packages = ["src/easy_tdx"]

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["pandas", "tabulate", "matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "easy_tdx.MyTT"
# Type stubs provided via MyTT.pyi — keep strict checks enabled

[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*", "pydantic.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["easy_tdx"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
